Upgrade to gwt 2.7, use CSS animations to change slides